# nbv_exploration_planner

./: .clang-format  .gitignore  README.md  dependencies.rosinstall
frontier_clustering/: CMakeLists.txt  package.xml
frontier_clustering/config/: general_params.yaml
frontier_clustering/include/frontier_clustering/: camera_model.h  common.h  frontier.h  frontier_clustering.h  params.h  viewpoints.h  voxblox_manager.h
frontier_clustering/launch/: frontiers.launch
frontier_clustering/src/: camera_model.cpp  frontier.cpp  frontier_clustering.cpp  frontier_clustering_node.cpp  viewpoints.cpp  voxblox_manager.cpp
nbveplanner/: CMakeLists.txt  package.xml
nbveplanner/data/2020_10_15_7_23_48/: exploration.txt  path.txt  response.txt  tree_1.txt  tree_10.txt  tree_11.txt  tree_12.txt  tree_13.txt  tree_14.txt  tree_15.txt  tree_16.txt  tree_17.txt  tree_18.txt  tree_19.txt  tree_2.txt  tree_20.txt  tree_21.txt  tree_22.txt  tree_23.txt  tree_24.txt  tree_25.txt  tree_26.txt  tree_27.txt  tree_28.txt  tree_29.txt  tree_3.txt  tree_30.txt  tree_31.txt  tree_32.txt  tree_33.txt  tree_34.txt  tree_35.txt  tree_36.txt  tree_37.txt  tree_38.txt  tree_39.txt  tree_4.txt  tree_40.txt  tree_42.txt  tree_43.txt  (+37 more)
nbveplanner/data/2020_10_15_7_6_34/: exploration.txt  path.txt  response.txt  tree_1.txt  tree_10.txt  tree_11.txt  tree_12.txt  tree_13.txt  tree_14.txt  tree_15.txt  tree_16.txt  tree_17.txt  tree_18.txt  tree_19.txt  tree_2.txt  tree_20.txt  tree_21.txt  tree_22.txt  tree_23.txt  tree_24.txt  tree_25.txt  tree_26.txt  tree_27.txt  tree_28.txt  tree_29.txt  tree_3.txt  tree_30.txt  tree_31.txt  tree_32.txt  tree_33.txt  tree_34.txt  tree_35.txt  tree_36.txt  tree_37.txt  tree_38.txt  tree_39.txt  tree_4.txt  tree_40.txt  tree_41.txt  tree_42.txt  (+58 more)
nbveplanner/data/2020_10_23_6_33_48/: exploration.txt  path.txt  response.txt  tree_1.txt  tree_10.txt  tree_11.txt  tree_12.txt  tree_13.txt  tree_14.txt  tree_15.txt  tree_16.txt  tree_17.txt  tree_18.txt  tree_19.txt  tree_2.txt  tree_20.txt  tree_21.txt  tree_22.txt  tree_23.txt  tree_24.txt  tree_25.txt  tree_26.txt  tree_27.txt  tree_28.txt  tree_29.txt  tree_3.txt  tree_30.txt  tree_31.txt  tree_32.txt  tree_33.txt  tree_34.txt  tree_35.txt  tree_36.txt  tree_37.txt  tree_38.txt  tree_39.txt  tree_4.txt  tree_40.txt  tree_41.txt  tree_42.txt  (+32 more)
nbveplanner/data/2020_10_23_6_37_53/: exploration.txt  path.txt  response.txt  tree_1.txt  tree_10.txt  tree_100.txt  tree_101.txt  tree_102.txt  tree_103.txt  tree_104.txt  tree_105.txt  (+125 more)
nbveplanner/launch/: rosbag.launch  rover.launch  sim.launch  voxblox_exploration_indoor.launch
nbveplanner/resource/: exploration_indoor.yaml  large_maze.yaml  rover.yaml  tunnel.yaml
nbveplanner/rviz/: rover.rviz  voxblox_exploration_indoor.rviz
nbveplanner/scripts/: plot_data.py
nbveplanner/src/: camera_model.cpp  history.cpp  nbv_exp_planner_node.cpp  nbvep.cpp  rrt.cpp  rrt_star.cpp  tree.cpp  voxblox_manager.cpp
nbveplanner/worlds/: compact_city.world  large_maze.world  maze.world  maze2.world  outdoor.world  outdoor2.world  test_city.world  tunnel.world  waypoint.world  willowgarage.world
(+6730 files in other folders)
