<?xml version="1.0"?>
<package format="2">
  <name>frontier_clustering</name>
  <version>0.0.0</version>
  <description>
      Frontier clustering and maintenance
  </description>
  <maintainer email="v.respall@innopolis.ru">Victor Massague Respall</maintainer>

  <license>TBD</license>
  
  <author>Victor Massague Respall</author>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roscpp</depend>
  <depend>eigen_catkin</depend>
  <depend>eigen_checks</depend>
  <depend>gflags_catkin</depend>
  <depend>glog_catkin</depend>
  <depend>voxblox_msgs</depend>
  <depend>voxblox</depend>

</package>
